<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".contactDisplay">

    <ImageButton
        android:id="@+id/btn_edit_contact"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_contact"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_contact"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_delete_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_contact"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollViewContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_contact">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="?attr/colorSecondary"
                android:contentDescription="@string/contactImage"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <TextView
                android:id="@+id/contact_firstname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="NA"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contact_lastname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="NA"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="#000000"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <TextView
                    android:id="@+id/contact_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="NA"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_start_message"
                    android:layout_width="70dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/see_contact_message"
                    android:src="@android:drawable/ic_dialog_email" />

                <ImageButton
                    android:id="@+id/btn_call"
                    android:layout_width="70dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/call_contact"
                    android:src="@android:drawable/ic_menu_call" />

            </LinearLayout>

            <TextView
                android:id="@+id/contact_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="NA"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/contact_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="NA"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/contact_birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="NA"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/contact_notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="NA"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>