<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".CreateNewContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_save_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_save" />

        <ImageView
            android:id="@+id/image_select"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/colorSecondary"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/txt_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txt_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxWidth="480dp"
            android:maxLength="20"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789+"
            android:inputType="phone"
            android:maxLength="20"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxWidth="480dp"
            android:maxLength="50"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:maxWidth="480dp"
            android:maxLength="40"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txt_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_label"
            android:textSize="20sp" />

        <DatePicker
            android:id="@+id/input_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true"
            android:text="@string/birthday_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxWidth="480dp"
            android:maxLength="100"
            android:minHeight="48dp" />

    </LinearLayout>

</ScrollView>