<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:background="?attr/colorSecondary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:id="@+id/contact"
    tools:context=".ContactPreviewFragment">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryDark"
        android:contentDescription="@string/contactImage"
        android:foreground="@android:drawable/ic_menu_myplaces"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/txtContact"
        android:layout_width="201dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical"
        android:scrollbars="none"
        android:scrollHorizontally="false"
        android:text="contact name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">

        <ImageButton
            android:id="@+id/btnSms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/email"
            android:src="@android:drawable/ic_dialog_email" />

        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/phone"
            android:src="@android:drawable/ic_menu_call" />
    </LinearLayout>
</LinearLayout>
